--- a/LuarToolkit/mainwindow.ui
+++ b/LuarToolkit/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>869</width>
+    <height>489</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>290</y>
+      <x>370</x>
+      <y>190</y>
       <width>80</width>
       <height>24</height>
      </rect>
@@ -30,14 +30,20 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>200</y>
-      <width>49</width>
-      <height>16</height>
+      <x>340</x>
+      <y>20</y>
+      <width>131</width>
+      <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>24</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
     <property name="text">
-     <string>TEST</string>
+     <string>Luar Toolkit</string>
     </property>
    </widget>
   </widget>
@@ -46,8 +52,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>21</height>
+     <width>869</width>
+     <height>22</height>
     </rect>
    </property>
   </widget>
